k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: asteroids
spec:
  type: ClusterIP
  selector: { app: asteroids }
  ports:
  - port: 80
    targetPort: 8080
